Fix alignment on header bar

--- a/app/assets/stylesheets/base/headers.scss
+++ b/app/assets/stylesheets/base/headers.scss
@@ -15,10 +15,8 @@
 	}
 
 	#taxonworks {
-
-
 		.logo {
-			width:200px;
+			width:160px;
 			height:20px;
 			background-image: image-url('taxonworks-white.svg');
 			background-size: contain;
